// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`supervision staff schema for 'US_CA' 'E2E_CA_OFFICER' 1`] = `
{
  "district": "E2E DISTRICT 1",
  "email": "e2e-ca-officer@example.com",
  "givenNames": "Delphine",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-ca-officer",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER",
  "staffExternalId": "E2E_CA_OFFICER",
  "stateCode": "US_CA",
  "supervisorExternalId": null,
  "surname": "Achebe",
}
`;

exports[`supervision staff schema for 'US_CA' 'E2E_CA_SUPERVISOR' 1`] = `
{
  "district": "E2E DISTRICT 1",
  "email": "e2e-ca-supervisor@example.com",
  "givenNames": "Ignatius",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-ca-supervisor",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "E2E_CA_SUPERVISOR",
  "stateCode": "US_CA",
  "supervisorExternalId": null,
  "surname": "Prashad",
}
`;

exports[`supervision staff schema for 'US_CA' 'OFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-1@example.com",
  "givenNames": "Maia",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_CA",
  "supervisorExternalId": "SUPERVISOR1",
  "surname": "Douglas",
}
`;

exports[`supervision staff schema for 'US_IA' 'OFFICER1' 1`] = `
{
  "email": "test-officer-1@example.com",
  "givenNames": "Anne",
  "hasCaseload": true,
  "pseudonymizedId": "p123",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_IA",
  "supervisorExternalId": null,
  "surname": "Teak",
}
`;

exports[`supervision staff schema for 'US_ID' 'E2E_ID_OFFICER' 1`] = `
{
  "email": "e2e-id-officer@example.com",
  "givenNames": "Thandeka",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-id-officer",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_ID_OFFICER",
  "stateCode": "US_ID",
  "supervisorExternalId": null,
  "surname": "Rourke",
}
`;

exports[`supervision staff schema for 'US_ID' 'OFFICER4' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-4@example.com",
  "givenNames": "Walter",
  "hasCaseload": true,
  "pseudonymizedId": "p004",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER4",
  "stateCode": "US_ID",
  "stateSpecificData": {
    "officeAddress": {
      "city": "iowa",
      "line1": "1234 address lane",
      "zip": "11123",
    },
    "stateCode": "US_ID",
  },
  "supervisorExternalId": "SUPER847",
  "surname": "Harris",
}
`;

exports[`supervision staff schema for 'US_ID' 'OFFICER6' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-6@example.com",
  "givenNames": "Hank",
  "hasCaseload": true,
  "pseudonymizedId": "p006",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER6",
  "stateCode": "US_ID",
  "stateSpecificData": {
    "officeAddress": undefined,
    "stateCode": "US_ID",
  },
  "supervisorExternalId": "SUPER847",
  "surname": "Schroeder",
}
`;

exports[`supervision staff schema for 'US_MI' 'E2E_MI_OFFICER' 1`] = `
{
  "district": "10",
  "email": "e2e-mi-officer@example.com",
  "givenNames": "Ambrose",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-mi-officer",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_MI_OFFICER",
  "stateCode": "US_MI",
  "supervisorExternalId": null,
  "surname": "Fitzsimmons",
}
`;

exports[`supervision staff schema for 'US_MI' 'OFFICER8' 1`] = `
{
  "email": "test-officer-8@example.com",
  "givenNames": "Antonia",
  "hasCaseload": true,
  "pseudonymizedId": "p008",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER8",
  "stateCode": "US_MI",
  "supervisorExternalId": "1290831",
  "surname": "Bonilla",
}
`;

exports[`supervision staff schema for 'US_NC' 'NCOFFICER1' 1`] = `
{
  "email": null,
  "givenNames": "Nathalie",
  "hasCaseload": true,
  "pseudonymizedId": "NCOFFICER1",
  "recordType": "supervisionStaff",
  "staffExternalId": "NCOFFICER1",
  "stateCode": "US_NC",
  "supervisorExternalId": null,
  "surname": "Giles",
}
`;

exports[`supervision staff schema for 'US_ND' 'OFFICER3' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-3@example.com",
  "givenNames": "Sumaiya",
  "hasCaseload": true,
  "pseudonymizedId": "p003",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER3",
  "stateCode": "US_ND",
  "supervisorExternalId": null,
  "surname": "Osborne",
}
`;

exports[`supervision staff schema for 'US_NE' 'NEOFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-ne@example.com",
  "givenNames": "Sarah",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "NEOFFICER1",
  "stateCode": "US_NE",
  "supervisorExternalId": "NESUPERVISOR1",
  "surname": "Mitchell",
}
`;

exports[`supervision staff schema for 'US_OR' '271828' 1`] = `
{
  "email": null,
  "givenNames": "271828",
  "hasCaseload": true,
  "pseudonymizedId": "p271",
  "recordType": "supervisionStaff",
  "staffExternalId": "271828",
  "stateCode": "US_OR",
  "supervisorExternalId": null,
  "surname": "271828",
}
`;

exports[`supervision staff schema for 'US_OR' '314159' 1`] = `
{
  "email": null,
  "givenNames": "314159",
  "hasCaseload": true,
  "pseudonymizedId": "p314",
  "recordType": "supervisionStaff",
  "staffExternalId": "314159",
  "stateCode": "US_OR",
  "supervisorExternalId": "SUPER221",
  "surname": "314159",
}
`;

exports[`supervision staff schema for 'US_PA' 'OFFICER1' 1`] = `
{
  "email": "test-officer@example.com",
  "givenNames": "Dana",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_PA",
  "supervisorExternalId": "25-1239123A",
  "surname": "Pruitt",
}
`;

exports[`supervision staff schema for 'US_PA' 'OFFICER2' 1`] = `
{
  "email": "test-officer@example.com",
  "givenNames": "Katelyn",
  "hasCaseload": true,
  "pseudonymizedId": "p002",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER2",
  "stateCode": "US_PA",
  "supervisorExternalId": null,
  "surname": "Frederick",
}
`;

exports[`supervision staff schema for 'US_TN' 'E2E_TN_OFFICER' 1`] = `
{
  "district": "E2E DISTRICT 1",
  "email": "e2e-tn-officer@example.com",
  "givenNames": "Rosalind",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-tn-officer",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_TN_OFFICER",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "surname": "Ashwood",
}
`;

exports[`supervision staff schema for 'US_TN' 'E2E_TN_OVERRIDE' 1`] = `
{
  "district": "E2E DISTRICT 1",
  "email": "e2e-tn-override@example.com",
  "givenNames": "Marisol",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-tn-override",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_TN_OVERRIDE",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "surname": "Quist",
}
`;

exports[`supervision staff schema for 'US_TN' 'E2E_TN_PEER' 1`] = `
{
  "district": "E2E DISTRICT 2",
  "email": "e2e-tn-peer@example.com",
  "givenNames": "Booker",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-tn-peer",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_TN_PEER",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "surname": "Nyland",
}
`;

exports[`supervision staff schema for 'US_TN' 'E2E_TN_REPORT' 1`] = `
{
  "district": "E2E DISTRICT 2",
  "email": "e2e-tn-report@example.com",
  "givenNames": "Perpetua",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-tn-report",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_TN_REPORT",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "supervisorExternalIds": [
    "E2E_TN_SUPERVISOR",
  ],
  "surname": "Oyelaran",
}
`;

exports[`supervision staff schema for 'US_TN' 'E2E_TN_REPORT_2' 1`] = `
{
  "district": "E2E DISTRICT 2",
  "email": "e2e-tn-report-2@example.com",
  "givenNames": "Calder",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-tn-report-2",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_TN_REPORT_2",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "supervisorExternalIds": [
    "E2E_TN_LEAD",
  ],
  "surname": "Mbeki",
}
`;

exports[`supervision staff schema for 'US_TN' 'E2E_TN_SUPERVISOR' 1`] = `
{
  "district": "E2E DISTRICT 3",
  "email": "e2e-tn-supervisor@example.com",
  "givenNames": "Idris",
  "hasCaseload": true,
  "pseudonymizedId": "hashed-e2e-tn-supervisor",
  "recordType": "supervisionStaff",
  "staffExternalId": "E2E_TN_SUPERVISOR",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "surname": "Vantol",
}
`;

exports[`supervision staff schema for 'US_TN' 'OFFICER1' 1`] = `
{
  "district": "Unit 1",
  "email": "test-officer@example.com",
  "givenNames": "Shayla",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_TN",
  "supervisorExternalId": "agonzalez123",
  "surname": "Rice",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "tx-test-officer@example.com",
  "givenNames": "Link",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER1",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": false,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR1",
  "surname": "Linkus",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER2' 1`] = `
{
  "district": "DISTRICT 42",
  "email": "tx-test-officer-2@example.com",
  "givenNames": "Arthur",
  "hasCaseload": true,
  "pseudonymizedId": "p002",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER2",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": true,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR2",
  "surname": "Jones",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER3' 1`] = `
{
  "district": "DISTRICT 23",
  "email": "tx-test-officer-3@example.com",
  "givenNames": "Amanda",
  "hasCaseload": true,
  "pseudonymizedId": "p003",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER3",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": false,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR3",
  "surname": "Garcia",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER4' 1`] = `
{
  "district": "DISTRICT 81",
  "email": "tx-test-officer-4@example.com",
  "givenNames": "Stephanie",
  "hasCaseload": true,
  "pseudonymizedId": "p004",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER4",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": true,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR4",
  "surname": "Smith",
}
`;

exports[`supervision staff schema for 'US_TX' 'OFFICER5' 1`] = `
{
  "district": "DISTRICT 42",
  "email": "tx-test-officer-5@example.com",
  "givenNames": "Christopher",
  "hasCaseload": true,
  "pseudonymizedId": "p005",
  "recordType": "supervisionStaff",
  "staffExternalId": "OFFICER5",
  "stateCode": "US_TX",
  "stateSpecificData": {
    "isInUnderstaffedOffice": false,
    "stateCode": "US_TX",
  },
  "supervisorExternalId": "SUPERVISOR5",
  "surname": "Johnson",
}
`;

exports[`supervision staff schema for 'US_TX' 'agonzalez123' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "tx-test-supervisor-gonzalez@example.com",
  "givenNames": "Alejandro",
  "hasCaseload": false,
  "pseudonymizedId": "hashed-agonzalez123",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "agonzalez123",
  "stateCode": "US_TX",
  "supervisorExternalId": null,
  "surname": "Gonzalez",
}
`;

exports[`supervision staff schema for 'US_TX' 'cmatterson567' 1`] = `
{
  "district": "DISTRICT 42",
  "email": "tx-test-supervisor-matterson@example.com",
  "givenNames": "Cora",
  "hasCaseload": false,
  "pseudonymizedId": "hashed-cmatterson567",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "cmatterson567",
  "stateCode": "US_TX",
  "supervisorExternalId": null,
  "surname": "Matterson",
}
`;

exports[`supervision staff schema for 'US_TX' 'cthomas321' 1`] = `
{
  "district": "DISTRICT 81",
  "email": "tx-test-supervisor-thomas@example.com",
  "givenNames": "Charles",
  "hasCaseload": false,
  "pseudonymizedId": "hashed-cthomas321",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "cthomas321",
  "stateCode": "US_TX",
  "supervisorExternalId": null,
  "surname": "Thomas",
}
`;

exports[`supervision staff schema for 'US_TX' 'dlee456' 1`] = `
{
  "district": "DISTRICT 23",
  "email": "tx-test-supervisor-lee@example.com",
  "givenNames": "David",
  "hasCaseload": false,
  "pseudonymizedId": "hashed-dlee456",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "dlee456",
  "stateCode": "US_TX",
  "supervisorExternalId": null,
  "surname": "Lee",
}
`;

exports[`supervision staff schema for 'US_TX' 'jwilliams345' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "tx-test-supervisor-williams@example.com",
  "givenNames": "Jared",
  "hasCaseload": false,
  "pseudonymizedId": "hashed-jwilliams345",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "jwilliams345",
  "stateCode": "US_TX",
  "supervisorExternalId": null,
  "surname": "Williams",
}
`;

exports[`supervision staff schema for 'US_TX' 'rsmith789' 1`] = `
{
  "district": "DISTRICT 42",
  "email": "tx-test-supervisor-smith@example.com",
  "givenNames": "Rosa",
  "hasCaseload": false,
  "pseudonymizedId": "hashed-rsmith789",
  "recordType": "supervisionStaff",
  "roleSubtype": "SUPERVISION_OFFICER_SUPERVISOR",
  "staffExternalId": "rsmith789",
  "stateCode": "US_TX",
  "supervisorExternalId": null,
  "surname": "Smith",
}
`;

exports[`supervision staff schema for 'US_UT' 'UTOFFICER1' 1`] = `
{
  "email": null,
  "givenNames": "Sunny",
  "hasCaseload": true,
  "pseudonymizedId": "p001",
  "recordType": "supervisionStaff",
  "staffExternalId": "UTOFFICER1",
  "stateCode": "US_UT",
  "supervisorExternalId": null,
  "surname": "Campana",
}
`;
